# qantum-aeterna.github.io

./: .gitignore  CNAME  Dockerfile  Dockerfile.backend  Dockerfile.rabbitmq  Jules_Evolution_Script.sh  dev_portal.py  docker-compose.yml  fix_flow.py  fix_nav_icons.py  frontend-verify.spec.ts  genesis.soul  ignite_production.ps1  index.html  last_deploy.json  main_railway.rs  manifest.webmanifest  package-lock.json  package.json  partner_hub.py  pnpm-lock.yaml  render.yaml  render_deploy.sh  replace_portal.py  sepa_training_set.json  services_list.json  sw.js  update_components.py  update_css.py  update_nav.py  update_payment.py
.github/workflows/: ci.yml  deploy.yml
AETERNA_RELEASE_DATA/: AETERNA_ANIMA.soul  cancel.html  fix_escapes.js  privacy.html  success.html
AETERNA_RELEASE_DATA/.github/workflows/: ci.yml
AETERNA_RELEASE_DATA/EIC_STEP2_INTERVIEW/: 00_MASTER_INDEX.md  01_PITCH_DECK_TECHNICAL_BRIEF.md  02_PITCH_SCRIPT_10MIN.md  03_QA_PREPARATION_53_QUESTIONS.md  04_FINANCIAL_MODEL_5YEAR.md  05_TRL_EVIDENCE_PACKAGE.md
AETERNA_RELEASE_DATA/OmniCore/autonomy/: AutonomousIngestion.ts  Catuskoti_Engine.ts  Entropy_Supervisor.gleam  GlobalScribe.ts  Immutable_Swarm.gleam  MobileFarmOrchestrator.ts  SemanticIntentMapper.ts  ShadowDomPenetrator.ts  SingularityIgnition.ts  SovereignAutoPilot.ts  SovereignMarketAnalysis.ts  Sovereign_Diplomacy_Protocol.ts  Sovereign_Execution_Auto_Pilot.ts  Sovereign_Hive_Mind.ts  Sovereign_Soul_Axiom.ts  TheEternalLegacy.ts  TheScribe.ts  ValueBombTrigger.ts  Veritas_Watchdog.gleam  Wealth_Sentinel.gleam
AETERNA_RELEASE_DATA/OmniCore/ignition/: AETERNA_Singularity_Ignition.ts
AETERNA_RELEASE_DATA/OmniCore/intelligence/: ChronosEngine.ts  NegotiatorAgent.ts
AETERNA_RELEASE_DATA/OmniCore/vortex/: VortexSystem.ts
AETERNA_RELEASE_DATA/PLAY_STORE/: check_access.py  check_access_v2.py  der_to_pem.py  fix_key_and_upload.py  repair_key.py  test_sovereign.py  ultimate_upload.py  upload_apps.js  upload_apps.py
AETERNA_RELEASE_DATA/keys/: service-account.json
Blockchain_Ledger/ENTERPRISE/QANTUM-NEXUS/: QANTUM-NEXUS.code-workspace  README2...md  package-lock.json  package.json  tsconfig.json
DASH/: package-lock.json  package.json
DASH/QAntum-Vortex-ml-healing-strategies-7790503036732323069/: HOLOGRAPHIC_README.md  QANTUM_MILITARY_CRYPTO_PORTFOLIO.txt  README.md  README_BRAIN.md  README_PUBLIC.md  ZERO_DEFECT_GUARANTEE.md  package-lock.json  package.json  tsconfig.json
DASH/QAntum-Vortex-ml-healing-strategies-7790503036732323069/scripts/: generate_data.js
DASH/QAntum-Vortex-ml-healing-strategies-7790503036732323069/tests/: demo_ml_healing.ts
DASH/src/: App.tsx
DASH/src-tauri/: Cargo.toml  tauri.conf.json
DASH/src-tauri/capabilities/: default.json
DASH/src-tauri/src/: lib.rs  main.rs
Dashboard_Final/: index.html
Dashboard_Final/Frontend/: SovereignHealingInstaller.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
Dashboard_Final/Frontend/src/: SovereignCore.test.ts  main.tsx
Dashboard_Final/Frontend/src/aeterna_node/: Cargo.toml
Dashboard_Final/Frontend/src/rust_mojo_core/: Cargo.toml
Dashboard_Final/Frontend/src/rust_mojo_core/src/runtime/: engine.rs
Frontend/: pnpm-lock.yaml
LwaS/src/: lib.rs  main.ts  main_hex.ts
LwaS/src/agents/: PineconeVectorStore.ts
LwaS/src/core/: SecureServer.js
LwaS/src/healing/: HealthMonitor.ts
LwaS/src/types/: isolated-vm.d.ts
LwaS/src/utils/: Logger.ts  ResilientHttpClient.ts  (+1 more)
OmniCore/: DepartmentEngine.ts  Dockerfile  SingularityServer.ts  tsconfig.json
OmniCore/auth/: UnifiedAuthSystem.ts
OmniCore/departments/: Department.ts  Intelligence.ts
OmniCore/economy/: PaymentGateway.ts
OmniCore/evolution/: ApoptosisModule.ts  LivenessTokenManager.ts
OmniCore/saas/: SaaSOrchestrator.ts
OmniCore/telemetry/: Logger.ts
SATELLITES/valuation-gate/: index.html
assets/: index-6wpsUi-r.js  index-BibyjE4l.css
docs/: vortex-dashboard.html
helios-ui/: .dockerignore  Dockerfile.web  docker-entrypoint.sh  nginx.conf.template  package-lock.json  package.json  vite.config.ts
helios-ui/Backend/: OmniCore.py  test_OmniCore.py
helios-ui/FULLSTACK-2/: OMEGA_LIVE_DASHBOARD.html
helios-ui/NQKAVDASH/backend/: Cargo.toml
helios-ui/NQKAVDASH/backend/src/: main.rs
helios-ui/src/: App.tsx  config.ts  index.css
hybrid-backend/: Dockerfile  supervisord.conf
hybrid-backend/python-ai/: ai_server.py
hybrid-backend/rust-core/: Cargo.toml
hybrid-backend/rust-core/src/: main.rs
lwas_cli/: Cargo.toml
lwas_cli/src/: main.rs
lwas_core/: Cargo.toml
lwas_core/src/neuro/: meta_logic.rs  mod.rs
lwas_core/src/omega/: aleph_broadcaster.rs  alignment_validator.rs  apotheosis.rs  audit.rs  global_rewrite.rs  lockdown.rs  mod.rs  noetic_engine.rs  reality_map.rs  rl.rs  scribe.rs  server.rs  sovereign_command.rs  wealth_bridge.rs
lwas_core/src/security/: ledger.rs
lwas_parser/src/: lwas.pest  parser.rs
qantum-hybrid/: package-lock.json  package.json
src/healing/: index.ts
src/types/: noble-ed25519.d.ts
(+1913 files in other folders)
