[package]
name = "lwas_cli"
version = "1.0.0-SINGULARITY"
edition = "2021"

[dependencies]
lwas_core = { path = "../lwas_core" }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenvy = "0.15"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4"] }
