[package]
name = "aeterna_hybrid"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "aeterna_hybrid"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
